--- a/public/publication/person-re-identification/index.html
+++ b/public/publication/person-re-identification/index.html
@@ -375,9 +375,29 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="/" target="_blank" rel="noopener">
+  Poster
+</a>
 
 
+<a class="btn btn-primary btn-outline" href="/" target="_blank" rel="noopener">
+  Slides
+</a>
 
+
+<a class="btn btn-primary btn-outline" href="/" target="_blank" rel="noopener">
+  Video
+</a>
+
+
+<a class="btn btn-primary btn-outline" href="/" target="_blank" rel="noopener">
+  Source Document
+</a>
+
+
+<a class="btn btn-primary btn-outline" href="https://doi.org/10.1136/oemed-2016-103804" target="_blank" rel="noopener">
+  Journal Link
+</a>
 
 
 
