--- a/public/404.html
+++ b/public/404.html
@@ -228,11 +228,7 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="/publication/clothing2/">Threat of dismissal and symptoms of major depression: a study using repeat measures in the Swedish working population</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/clothing1/">The role of sleep disturbances in the longitudinal relationship between psychosocial working conditions, measured by work demands and support, and depression</a></li>
+    <li><a href="/publication/sjwehwfc/">Work-to-home interference and its prospective relation to major depression and treatment with antidepressants using the Swedish Longitudinal and Occupational Survey of Health (SLOSH)</a></li>
   </ul>
   
   <ul>
@@ -245,6 +241,10 @@
   
   <ul>
     <li><a href="/publication/ijph/">Public-private differential in healthcare and healthcare cost in India: the case of inpatients</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/psp/">Place, community education, gender and child mortality in Northeast India</a></li>
   </ul>
   
   
