--- a/public/publication/plosburn/index.html
+++ b/public/publication/plosburn/index.html
@@ -427,7 +427,7 @@
   <nav>
   <ul class="pager">
     
-    <li class="previous"><a href="/publication/amhdep/"><span
+    <li class="previous"><a href="/publication/ijnswfc/"><span
       aria-hidden="true">&larr;</span> Hospital organizational factors influence work-family conflict in registered nurses: multilevel modelling of a nation-wide cross-sectional survey in Sweden</a></li>
     
 
