--- a/public/404.html
+++ b/public/404.html
@@ -228,10 +228,6 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="/publication/sjwehwfc/">Work-to-home interference and its prospective relation to major depression and treatment with antidepressants using the Swedish Longitudinal and Occupational Survey of Health (SLOSH)</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="/publication/clothing3/">A longitudinal analysis of confirmatory factor structure and measurement invariance of the demand control support model: an evidence from SLOSH</a></li>
   </ul>
   
@@ -241,6 +237,10 @@
   
   <ul>
     <li><a href="/publication/ijph/">Public-private differential in healthcare and healthcare cost in India: the case of inpatients</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/aps/">Rich-poor gap in maternal care: the case of Northeast India.</a></li>
   </ul>
   
   <ul>
