--- a/public/index.html
+++ b/public/index.html
@@ -875,7 +875,7 @@ url('/img/headers/bg.jpg');
       
         <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
-  <a href="/publication/ergo/" itemprop="name">“Office design impact on sick leave rates</a>
+  <a href="/publication/ergo/" itemprop="name">Office design impact on sick leave rates</a>
   <div itemprop="author">
     Danielsson CB, Chungkham HS, Wulff C, Westerlund H</div>
   <p>
