--- a/public/publication/ergo/index.html
+++ b/public/publication/ergo/index.html
@@ -66,7 +66,7 @@
   
   <meta property="og:site_name" content="HOLENDRO SINGH CHUNGKHAM">
   <meta property="og:url" content="/publication/ergo/">
-  <meta property="og:title" content="“Office design impact on sick leave rates | HOLENDRO SINGH CHUNGKHAM">
+  <meta property="og:title" content="Office design impact on sick leave rates | HOLENDRO SINGH CHUNGKHAM">
   <meta property="og:description" content="The effect of office type on sickness absence among office employees was studied prospectively in 1852 employees working in (1) cell-offices; (2) shared-room offices; (3) small, (4) medium-sized and (5) large open-plan offices; (6) flex-offices and (7) combi-offices. Sick leaves were self-reported two years later as number of (a) short and (b) long (medically certified) sick leave spells as well as (c) total number of sick leave days. Multivariate logistic regression analysis was used, with adjustment for background factors. A significant excess risk for sickness absence was found only in terms of short sick leave spells in the three open-plan offices. In the gender separate analysis, this remained for women, whereas men had a significantly increased risk in flex-offices. For long sick leave spells, a significantly higher risk was found among women in large open-plan offices and for total number of sick days among men in flex-offices. **Practitioner Summary:** A prospective study of the office environment&#39;s effect on employees is motivated by the high rates of sick leaves in the workforce. The results indicate differences between office types, depending on the number of people sharing workspace and the opportunity to exert personal control as influenced by the features that define the office types."><meta property="og:image" content="/img/headers/bubbles-wide.jpg">
   <meta property="og:locale" content="en-us">
   
@@ -77,7 +77,7 @@
 
   
 
-  <title>“Office design impact on sick leave rates | HOLENDRO SINGH CHUNGKHAM</title>
+  <title>Office design impact on sick leave rates | HOLENDRO SINGH CHUNGKHAM</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -228,7 +228,7 @@
 
 
   <div class="container pub-title">
-    <h1 itemprop="name">“Office design impact on sick leave rates</h1>
+    <h1 itemprop="name">Office design impact on sick leave rates</h1>
     <span class="pub-authors" itemprop="author">
       
       Danielsson CB, Chungkham HS, Wulff C, Westerlund H
@@ -240,7 +240,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=%e2%80%9cOffice%20design%20impact%20on%20sick%20leave%20rates&amp;url=%2fpublication%2fergo%2f"
+         href="https://twitter.com/intent/tweet?text=Office%20design%20impact%20on%20sick%20leave%20rates&amp;url=%2fpublication%2fergo%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -254,21 +254,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fergo%2f&amp;title=%e2%80%9cOffice%20design%20impact%20on%20sick%20leave%20rates"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fergo%2f&amp;title=Office%20design%20impact%20on%20sick%20leave%20rates"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fergo%2f&amp;title=%e2%80%9cOffice%20design%20impact%20on%20sick%20leave%20rates"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fergo%2f&amp;title=Office%20design%20impact%20on%20sick%20leave%20rates"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=%e2%80%9cOffice%20design%20impact%20on%20sick%20leave%20rates&amp;body=%2fpublication%2fergo%2f">
+         href="mailto:?subject=Office%20design%20impact%20on%20sick%20leave%20rates&amp;body=%2fpublication%2fergo%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
