--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -1007,7 +1007,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     Danielsson CB, Chungkham HS, Wulff C, Westerlund H</span>.
-  <a href="/publication/ergo/" itemprop="name">“Office design impact on sick leave rates</a>.
+  <a href="/publication/ergo/" itemprop="name">Office design impact on sick leave rates</a>.
   In <em>Aging and Mental Health</em>,&nbsp;2014.
   <p>
 
