--- a/public/publication_types/2/index.html
+++ b/public/publication_types/2/index.html
@@ -286,7 +286,7 @@
   </div>
   
   <div>
-    <h2><a href="/publication/ergo/">“Office design impact on sick leave rates</a></h2>
+    <h2><a href="/publication/ergo/">Office design impact on sick leave rates</a></h2>
     <div class="article-style">
       
     </div>
