--- a/public/index.html
+++ b/public/index.html
@@ -468,7 +468,7 @@ url('/img/headers/bg.jpg');
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.idear-net.net/slosh/in-english" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -542,7 +542,7 @@ url('/img/headers/bg.jpg');
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.rn4cast.eu/" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -764,7 +764,7 @@ url('/img/headers/bg.jpg');
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.idear-net.net/slosh/in-english" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -912,7 +912,7 @@ url('/img/headers/bg.jpg');
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.idear-net.net/slosh/in-english" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -986,7 +986,7 @@ url('/img/headers/bg.jpg');
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.rn4cast.eu/" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1060,7 +1060,7 @@ url('/img/headers/bg.jpg');
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.rn4cast.eu/" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1282,7 +1282,7 @@ url('/img/headers/bg.jpg');
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.idear-net.net/slosh/in-english" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1578,7 +1578,7 @@ url('/img/headers/bg.jpg');
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://rchiips.org/nfhs/abt.html" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1652,7 +1652,7 @@ url('/img/headers/bg.jpg');
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://rchiips.org/nfhs/abt.html" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1770,7 +1770,7 @@ url('/img/headers/bg.jpg');
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.idear-net.net" target="_blank" rel="noopener">
   Dataset
 </a>
 
