--- a/public/project/example-external-project/index.html
+++ b/public/project/example-external-project/index.html
@@ -413,7 +413,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.idear-net.net/slosh/in-english" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -488,7 +488,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.rn4cast.eu/" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -713,7 +713,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.idear-net.net/slosh/in-english" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -863,7 +863,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.idear-net.net/slosh/in-english" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -938,7 +938,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.rn4cast.eu/" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1013,7 +1013,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.rn4cast.eu/" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1238,7 +1238,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.idear-net.net/slosh/in-english" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1538,7 +1538,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://rchiips.org/nfhs/abt.html" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1613,7 +1613,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://rchiips.org/nfhs/abt.html" target="_blank" rel="noopener">
   Dataset
 </a>
 
