--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -372,7 +372,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.idear-net.net" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -538,7 +538,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.idear-net.net/slosh/in-english" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -621,7 +621,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.rn4cast.eu/" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -787,7 +787,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.idear-net.net/slosh/in-english" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1036,7 +1036,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.idear-net.net/slosh/in-english" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1119,7 +1119,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.rn4cast.eu/" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1202,7 +1202,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.rn4cast.eu/" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1368,7 +1368,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.idear-net.net/slosh/in-english" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1783,7 +1783,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://rchiips.org/nfhs/abt.html" target="_blank" rel="noopener">
   Dataset
 </a>
 
@@ -1866,7 +1866,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="http://rchiips.org/nfhs/abt.html" target="_blank" rel="noopener">
   Dataset
 </a>
 
