--- a/public/publication/person-re-identification/index.html
+++ b/public/publication/person-re-identification/index.html
@@ -363,7 +363,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="http://www.idear-net.net" target="_blank" rel="noopener">
   Dataset
 </a>
 
