--- a/public/publication/ergo/index.html
+++ b/public/publication/ergo/index.html
@@ -368,7 +368,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="http://www.idear-net.net/slosh/in-english" target="_blank" rel="noopener">
   Dataset
 </a>
 
