--- a/public/publication/psp/index.html
+++ b/public/publication/psp/index.html
@@ -368,7 +368,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline" href="/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="http://rchiips.org/nfhs/abt.html" target="_blank" rel="noopener">
   Dataset
 </a>
 
