--- a/public/publication/weshichapter/index.html
+++ b/public/publication/weshichapter/index.html
@@ -308,7 +308,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">In <em>Policy Press</em>, University of Bristol (UK).</div>
+          <div class="col-xs-12 col-sm-9">In <em>Work and Health in India</em>, Policy Press, University of Bristol (UK).</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
